<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_menu_header"
        android:title="@string/recipe_source_menu_header">
        <menu>

            <item
                android:id="@+id/home_page"
                android:icon="@drawable/baseline_dinner_dining_24"
                android:title="@string/homepage"
                android:checkable="true" />
            <item
                android:id="@+id/generate_recipe"
                android:icon="@drawable/baseline_dinner_dining_24"
                android:title="@string/generate_recipe"
                android:checkable="true" />
            <item
                android:id="@+id/view_past_recipes"
                android:icon="@drawable/baseline_lunch_dining_24"
                android:title="@string/past_recipes"
                android:checkable="true"/>

        </menu>
    </item>
    <item
        android:id="@+id/info_menu_header"
        android:title="@string/info_menu_header">
        <menu>
            <item
                android:id="@+id/about_page"
                android:icon="@drawable/baseline_info_24"
                android:title="@string/about"
                android:checkable="true"/>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout"
                android:checkable="true"/>
        </menu>
    </item>

</menu>